<resources>
    <!-- General applioation strings. -->
    <string name="app_name">StrideRPG</string>

    <!-- Authentication steps -->
    <string name="auth_init">Initializing…</string>
    <string name="auth_authenticate">Authenticating…</string>
    <string name="auth_login">Logging In…</string>
    <string name="auth_signin">Google Sign In…</string>
    <string name="auth_load">Loading Player Data…</string>
    <string name="auth_gen_new">Generating New Player Data…</string>

    <!-- Navigation bar strings -->
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="navbar_dashboard">Dashboard</string>
    <string name="navbar_quests">Quests</string>
    <string name="navbar_inventory">Inventory</string>
    <string name="navbar_bestiary">Bestiary</string>
    <string name="navbar_leaderboard">Leaderboards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_level_label">LV:</string>
    <string name="image_that_shows_the_type_of_event_between_them">Image that shows the type of event between them</string>
    <string name="enemy_descrption">Enemy Description</string>

    <!-- Item Rarity Colors -->
    <string name="rarity_common">#F4F4F4</string>
    <string name="rarity_uncommon">#66F00F</string>
    <string name="rarity_rare">#0FD2F0</string>
    <string name="rarity_epic">#9D0FF0</string>
    <string name="rarity_legendary">#F0C60F</string>

</resources>
